--- a/React/JuiceShop/src/styles/Card.css
+++ b/React/JuiceShop/src/styles/Card.css
@@ -45,5 +45,26 @@
 
 .card p{
     font-size: large;
+    margin: 1px auto;
 
+}
+
+.card .button{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: #3498db;
+    color: white;
+    cursor: pointer;
+    border-radius: 25px;
+    text-align: center;
+    line-height: 35px;
+    bottom: 10px;
+    right: 10px;
+    transition: all 0.3 ease;
+}
+
+.card .button:hover{
+    background-color: #2980b9;
 }
