--- a/React/JuiceShop/src/styles/Navbar.css
+++ b/React/JuiceShop/src/styles/Navbar.css
@@ -12,6 +12,23 @@
     flex: 1;
   }
   .basket{
+    position: relative;
     font-size: 1.5rem;
     cursor: pointer;
+    margin-right: 15px;
+    aspect-ratio: 1;
+    width: 1.5rem;
   } 
+
+  .basket span{
+    position: absolute;
+    top: -10px;
+    right: -15px;
+    background-color: #ffffff;
+    color: #000000;
+    border-radius: 50%;
+    padding: 5px;
+    width: 30px;
+    font-size: 12px;
+    text-align: center;
+  }
