--- a/React/JuiceShop/src/styles/Card.css
+++ b/React/JuiceShop/src/styles/Card.css
@@ -51,20 +51,14 @@
 
 .card .button{
     position: absolute;
-    width: 40px;
-    height: 40px;
-    border: none;
-    background-color: #3498db;
-    color: white;
-    cursor: pointer;
-    border-radius: 25px;
-    text-align: center;
-    line-height: 35px;
-    bottom: 10px;
     right: 10px;
+    bottom: 0px;
+    color: #777777;
+    font-size: 2.5rem;
+    cursor: pointer;
     transition: all 0.3 ease;
 }
 
 .card .button:hover{
-    background-color: #2980b9;
+    color: #2980b9;
 }
