--- a/React/JuiceShop/src/styles/Navbar.css
+++ b/React/JuiceShop/src/styles/Navbar.css
@@ -11,7 +11,7 @@
     text-align: center;
     flex: 1;
   }
-  .basket{
+  .basket_icon{
     position: relative;
     font-size: 1.5rem;
     cursor: pointer;
@@ -20,7 +20,7 @@
     width: 1.5rem;
   } 
 
-  .basket span{
+  .basket_icon span{
     position: absolute;
     top: -10px;
     right: -15px;
